test/library/packages/Python/correctness/arrays/arrayErrors.4.good
$CHPL_HOME/modules/packages/Python.chpl:nnnn: In method 'this':
$CHPL_HOME/modules/packages/Python.chpl:nnnn: error: Element type must be specified at compile time
  arrayErrors.chpl:125: called as (PyArray(nothing,-1)).this(idx: int(64))
