test/library/packages/Python/correctness/arrays/arrayErrors.compopts
-stestCase=1
-stestCase=2
-stestCase=3
-stestCase=4
-stestCase=5
-stestCase=6
-stestCase=7
-stestCase=8
-stestCase=9
-stestCase=10
-stestCase=11
-stestCase=12
